--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
       <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
-   
+   <!--  bootstrap cdn v5.3 css -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <!-- fontawesome cdn v5.3 css -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZ" />
+    
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lucida+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -29,6 +41,8 @@
     <ul class="cities"></ul>
     </div>
   </main>
+  <footer class="footer-class">
+  </footer>
  <script>
     function loadDeferredScripts() {
       // a basic function to be used to load scripts dynanically
@@ -48,13 +62,13 @@
       loadScript('https://code.jquery.com/jquery-3.6.4.min.js')
         .then(function () {
           var scriptUrls = [
-            'https://cdn.jsdelivr.net/npm/bulma-calendar@6.1.19/dist/js/bulma-calendar.min.js',
+           // cdn bootstrap v5.3css
+           'https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js',
+            'https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js',
             'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js',
-            'https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js',
             './assets/js/weatherapi.js',
             './assets/js/cards.js',
             './assets/js/script.js',
-
           ];
 
           return Promise.all(scriptUrls.map(loadScript));
