--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
    <!--  bootstrap cdn v5.3 css -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
     />
     <!-- fontawesome cdn v5.3 css -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZ" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <link
       href="https://fonts.googleapis.com/css2?family=Lucida+Sans:wght@400;700&display=swap"
@@ -32,13 +27,13 @@
     </header>
     <main class="main container">
     <aside class="sidebar">
-      <form method="" action="">
+      <form method="" action="" id="weatherLookup">
       <input type="text" id="city" class="input-city" placeholder="Search for a city" autofocus>
         <button type="submit" class="button submit">SUBMIT</button>
       </form>
     </aside>
     <div class="results container">
-    <ul class="cities"></ul>
+  
     </div>
   </main>
   <footer class="footer-class">
@@ -64,7 +59,7 @@
           var scriptUrls = [
            // cdn bootstrap v5.3css
            'https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js',
-            'https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js',
+            'https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js',
             'https://unpkg.com/@popperjs/core@2.11.6/dist/umd/popper.min.js',
             'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js',
             './assets/js/weatherapi.js',
