--- a/index.html
+++ b/index.html
@@ -30,9 +30,22 @@
     margin: 0!important;
 ">
     <aside class="col-3 sidebar">
-      <form method="" action="" id="weatherLookup">
-        <input type="text" id="city" class="input-city" placeholder="Search for a city" autofocus="">
-        <button type="submit" class="button submit">SUBMIT</button>
+      <form method="" action="" id="weatherLookup" class="row g-3">
+        <div class="col-auto">
+      <!--  <input type="text" id="city" class="input-city" placeholder="Search for a city" autofocus=""> -->
+      <label for="exampleDataList" class="form-label">Datalist example</label>
+      <input class="form-control" list="datalistOptions" id="city" placeholder="Search for a city" autofocus>
+      <datalist id="datalistOptions">
+        <option value="San Francisco">
+        <option value="New York">
+        <option value="Seattle">
+        <option value="Los Angeles">
+        <option value="Chicago">
+      </datalist>
+      <div class="col-auto">
+        <button type="submit" class="button btn btn-primary mb-3">SUBMIT</button>
+        </div>
+        </div>
       </form>
     </aside>
     <div class="col-9 results container-flex">
