Added DatalistOptions feed from localstorage

--- a/index.html
+++ b/index.html
@@ -34,13 +34,8 @@
         <div class="col-auto">
       <!--  <input type="text" id="city" class="input-city" placeholder="Search for a city" autofocus=""> -->
       <label for="exampleDataList" class="form-label">Datalist example</label>
-      <input class="form-control" list="datalistOptions" id="city" placeholder="Search for a city" autofocus>
+      <input class="form-control" list="datalistOptions" id="city" placeholder="Search for a city" autofocus autocomplete="off">
       <datalist id="datalistOptions">
-        <option value="San Francisco">
-        <option value="New York">
-        <option value="Seattle">
-        <option value="Los Angeles">
-        <option value="Chicago">
       </datalist>
       <div class="col-auto">
         <button type="submit" class="button btn btn-primary mb-3">SUBMIT</button>
