--- a/index.html
+++ b/index.html
@@ -30,17 +30,20 @@
     margin: 0!important;
 ">
     <aside class="col-3 sidebar">
-      <form method="" action="" id="weatherLookup" class="row g-3">
-        <div class="col-auto">
+      <form method="" action="" id="weatherLookup" class="form-control">
+        
+          <div class="form-floating">
       <!--  <input type="text" id="city" class="input-city" placeholder="Search for a city" autofocus=""> -->
-      <label for="exampleDataList" class="form-label">Datalist example</label>
+   
       <input class="form-control" list="datalistOptions" id="city" placeholder="Search for a city" autofocus autocomplete="off">
+      <label for="city">Enter a city</label>
       <datalist id="datalistOptions">
       </datalist>
+    </div>
       <div class="col-auto">
-        <button type="submit" class="button btn btn-primary mb-3">SUBMIT</button>
+        <button type="submit" class="button col-12 btn btn-primary">SUBMIT</button>
         </div>
-        </div>
+       
       </form>
     </aside>
     <div class="col-9 results container-flex">
